# aiced-cli

./: .gitignore  Cargo.toml  README.md  ai_response.txt  analysis.txt  analysis1.txt  prompt.txt
src/: main.rs
src/adapters/: aiced_adapter.rs  ailyzer_adapter.rs  mod.rs
src/config/: config_manager.rs  constants.rs  mod.rs
src/constants/: prompts.rs
src/enums/: ai_provider_error.rs  analysis_status.rs  anthropic_error.rs  application_mode.rs  application_strategy.rs  commands.rs  diff_display_mode.rs  file_change.rs  line_change.rs  mod.rs  priority.rs  priority_recommendation.rs  session_status.rs  stream_event_data.rs
src/errors/: mod.rs
src/helpers/: config_helper.rs  continuation.rs  mod.rs  prompt_generator.rs
src/logger/: animated_logger.rs  file_change_logger.rs  mod.rs
src/prompts/: file_filter_system_prompt.rs  mod.rs  system_analysis_prompt.rs
src/services/: analysis_parser.rs  anthropic.rs  code_analyzer.rs  custom_parser.rs  file_modifier.rs  mod.rs  rate_limiter.rs  repo_scanner.rs  repository_manager.rs  stack_recommendation_parser.rs
src/services/ai/: anthropic.rs
src/services/ai_providers/: anthropic.rs  deepseek.rs  gemini.rs  mod.rs  openai.rs
src/structs/: analysis_response.rs  analysis_result.rs  analyze_repository_response.rs  analyze_request.rs  analyze_response.rs  api_response.rs  apply_result.rs  category_stats.rs  change_statistics.rs  change_statistics_builder.rs  cli.rs  file_info.rs  files_cache.rs  message.rs  mod.rs  parse_error.rs  performance_improvement.rs  security_issue.rs  stack_recommendation.rs  stream_item.rs  stream_result.rs  technology_stack.rs  validation_result.rs
src/structs/ai/: api_error.rs  content_delta.rs  finish_usage_info.rs  message_delta.rs  message_request.rs  message_start_info.rs  mod.rs  start_usage_info.rs  stream_response.rs  thinking.rs  token_count_request.rs  token_count_response.rs
src/structs/ai/anthropic/: anthropic_content_delta.rs  anthropic_finish_usage_info.rs  anthropic_message.rs  anthropic_message_delta.rs  anthropic_message_request.rs  anthropic_message_start_info.rs  anthropic_start_usage_info.rs  anthropic_thinking.rs  anthropic_token_count_request.rs  anthropic_token_count_response.rs  mod.rs
src/structs/ai/deepseek/: deepseek_choice.rs  deepseek_delta.rs  deepseek_message.rs  deepseek_request.rs  deepseek_response.rs  deepseek_stream_choice.rs  deepseek_stream_response.rs  deepseek_usage.rs  mod.rs
src/structs/ai/gemini/: gemini_content.rs  gemini_generation_config.rs  gemini_part.rs  gemini_request.rs  gemini_safety_setting.rs  mod.rs
src/structs/ai/openai/: mod.rs  openai_message.rs  openai_request.rs
src/structs/config/: ai_config.rs  analysis_config.rs  config.rs  email_auth.rs  email_config.rs  global_config.rs  mod.rs  notification_config.rs  output_config.rs  pattern_rule.rs  profile_config.rs  repository_config.rs  security_config.rs  slack_config.rs  webhook_config.rs
src/structs/diff/: change_item.rs  diff_session.rs  file_diff.rs  mod.rs
src/traits/: ai_provider.rs  mod.rs  stream_processor.rs
src/ui/: diff_server.rs  mod.rs  session_manager.rs
src/ui/static/: diff-viewer.css  diff-viewer.js  index.html
src/ui/static/assets/: index-BOLGf65s.js  index-CrM18AVy.css
src/workers/: command_runner.rs  mod.rs
