[package]
name = "ailyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["json", "stream"] }
tokio = { version = "1", features = ["full", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
governor = "0.10.0"
nonzero_ext = "0.3"
toml = "0.8"
dirs = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4.41"
terminal_size = "0.4.2"
async-trait = "0.1.88"