[package]
name = "aiced-cli"
version = "0.2.0"
edition = "2021"
authors = ["Aiced Team"]
description = "AI-powered code analysis tool with enhanced parsing and change management"
license = "MIT"
repository = "https://github.com/sheikh1309/ailyzer-cli"
keywords = ["code-analysis", "ai", "automation", "refactoring", "development-tools"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full", "fs"] }
reqwest = { version = "0.12.19", features = ["json", "stream", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
toml = "0.8"
async-trait = "0.1.88"
dirs = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
log = "0.4"
env_logger = "0.11.8"
rayon = { version = "1.7", optional = true }          # Parallel processing
dashmap = { version = "5.5", optional = true }        # Concurrent hash maps
uuid = { version = "1.4", features = ["v4"] }  # Unique identifiers
warp = "0.3"                    # Web server framework
webbrowser = "0.8"              # Open browser automatically
notify = { version = "6.1", optional = true }
flate2 = { version = "1.0", optional = true }
tokio-tungstenite = { version = "0.20", optional = true }
libloading = { version = "0.8", optional = true }
prometheus = { version = "0.13", optional = true }

[features]
default = ["parallel-processing", "dashmap"]
parallel-processing = ["rayon", "dashmap"]
web-dashboard = ["tokio-tungstenite"]
plugin-system = ["libloading"]
metrics = ["prometheus"]
file-watching = ["notify"]
caching = ["flate2"]

